--- a/BDP.qmd
+++ b/BDP.qmd
@@ -25,97 +25,109 @@ source("R/indicators.R")
 
 # Jednokratno učitaj podatke
 dat   <- prepare_gdp_data()
-panel <- build_panel_real(dat$gdp_real)
+panel <- build_panel_real(dat$gdp_real, dat$gdp_real_aggregates)
 ```
 
 
 > Stranica se automatski ažurira ponedjeljkom u 06:00 (CET). Posljednje ažuriranje: `r format(lubridate::with_tz(Sys.time(), "Europe/Zagreb"), "%d.%m.%Y. u %H:%M")`.
 
-
-# Najnovija kretanja BDP-a u EU 27
-
-## Realni BDP yoy
-
-```{r}
-plot_gdp_real_q_yoy_eu27_tminus1()
+```{=html}
+<script>
+if (!window.__calloutResizeInit) {
+  window.__calloutResizeInit = true;
+  document.addEventListener('shown.bs.collapse', function() {
+    window.dispatchEvent(new Event('resize'));
+  });
+}
+</script>
 ```
 
-## Realni BDP yoy (posljednji kvartal)
 
-```{r}
-plot_gdp_real_q_yoy_eu27_latest()
-```
+# Tromjesečni podaci realnog BDP-a
 
-## Realni BDP qoq (posljednji kvartal)
 
-```{r}
-plot_gdp_real_q_qoq_eu27_latest_echarts()
-```
-
-## Realni BDP qoq (zadnji kompletni kvartal)
+## qoq
 
 ```{r}
 plot_gdp_real_q_qoq_eu27_tminus1_echarts()
 ```
 
-
-## Nominalni BDP
-
-```{r}
-plot_gdp_nominal_growth_eu27_latest()
-```
-
-## Realni BDP
+::: {.callout-note collapse=true title="Prikaži / sakrij graf (podaci privremeni)"}
+Graf je privremen dok ne stignu svi podaci; klikni za prikaz ili skrivanje.
 
 ```{r}
-plot_gdp_real_growth_eu27_latest()
+plot_gdp_real_q_qoq_eu27_latest_echarts()
 ```
+:::
 
-## BDP po stanovniku u PPS (CEE, EU 27 = 100)
 
-```{r}
-plot_gdp_pc_cee_pps_last()
-```
-
-# Dugoročni trendovi realnog BDP-a
-
-## Kretanje realnog BDP-a: Hrvatska i referentne europske skupine
-
-```{r}
-plot_gdp_index(panel, meta = dat)
-```
-
-# Dinamika rasta realnog BDP-a
-
-## Godišnje stope rasta realnog BDP-a
-
-```{r}
-plot_gdp_yoy(panel, meta = dat)
-```
-
-## Tromjesečne stope rasta realnog BDP-a
+## qoq duža serija
 
 ```{r}
 plot_gdp_qoq_hr()
 ```
 
-# Distribucija realnog BDP-a unutar skupina
+## yoy
 
-## CEE bez Hrvatske
+```{r}
+plot_gdp_real_q_yoy_eu27_tminus1()
+```
+
+::: {.callout-note collapse=true title="Prikaži / sakrij graf (podaci privremeni)"}
+Graf je privremen dok ne stignu svi podaci; klikni za prikaz ili skrivanje.
+
+```{r}
+plot_gdp_real_q_yoy_eu27_latest()
+```
+:::
+
+
+# Godišnji podaci 
+
+## realni BDP
+```{r}
+plot_gdp_real_growth_eu27_latest()
+```
+
+## nominalni BDP-a
+
+```{r}
+plot_gdp_nominal_growth_eu27_latest()
+```
+
+## BDP po stanovniku (PPS, EU 27 = 100)
+
+```{r}
+plot_gdp_pc_cee_pps_last()
+```
+
+# Dugoročna kretanja realnog BDP-a
+
+
+```{r}
+plot_gdp_index(panel, meta = dat)
+```
+
+
+```{r}
+plot_gdp_yoy(panel, meta = dat)
+```
+
+## CEE 
 
 ```{r, fig.height=6}
 plot_gdp_index_distribution_echarts(gdp_real = dat$gdp_real, panel_df = panel, group_key = "CEE_exHR", meta = dat)
 plot_gdp_yoy_distribution_echarts(gdp_real = dat$gdp_real, panel_df = panel, group_key = "CEE_exHR", meta = dat)
 ```
 
-## EU 27 bez Hrvatske
+## EU 27 
 
 ```{r, fig.height=6}
 plot_gdp_index_distribution_echarts(gdp_real = dat$gdp_real, panel_df = panel, group_key = "EU27_exHR", meta = dat)
 plot_gdp_yoy_distribution_echarts(gdp_real = dat$gdp_real, panel_df = panel, group_key = "EU27_exHR", meta = dat)
 ```
 
-## Područje eura bez Hrvatske
+## Europodručje
 
 ```{r, fig.height=6}
 plot_gdp_index_distribution_echarts(gdp_real = dat$gdp_real, panel_df = panel, group_key = "EA_exHR", meta = dat)
@@ -126,9 +138,6 @@ plot_gdp_yoy_distribution_echarts(gdp_real = dat$gdp_real, panel_df = panel, gro
 
 # Napomene
 
-- Izvori podataka: Eurostat, AMECO, Copernicus, DZS  
-- Metodološke napomene: svi grafovi izrađeni su na temelju javno dostupnih serija  
-- Ažuriranje: podaci se automatski osvježavaju prilikom ponovnog renderiranja Quarto dokumenta
 
 <hr>
 
