Add level GDP charts and tidy quarterly sections

--- a/BDP.qmd
+++ b/BDP.qmd
@@ -45,8 +45,22 @@ if (!window.__calloutResizeInit) {
 
 # Tromjesečni podaci realnog BDP-a
 
+## mlrd. EUR realni BDP
 
-## qoq
+```{r}
+plot_gdp_real_q_level_eu27_tminus1_echarts()
+```
+
+::: {.callout-note collapse=true title="Prikaži / sakrij graf (podaci privremeni)"}
+Graf je privremen dok ne stignu svi podaci; klikni za prikaz ili skrivanje.
+
+```{r}
+plot_gdp_real_q_level_eu27_latest_echarts()
+```
+:::
+
+
+## qoq stopa promjene
 
 ```{r}
 plot_gdp_real_q_qoq_eu27_tminus1_echarts()
@@ -61,13 +75,13 @@ plot_gdp_real_q_qoq_eu27_latest_echarts()
 :::
 
 
-## qoq duža serija
+## qoq stopa promjene duža serija
 
 ```{r}
 plot_gdp_qoq_hr()
 ```
 
-## yoy
+## yoy stopa promjene
 
 ```{r}
 plot_gdp_real_q_yoy_eu27_tminus1()
