Replace draft placeholders with simple 'Radni nacrt.'

--- a/index.qmd
+++ b/index.qmd
@@ -2,4 +2,4 @@
 title: "Naslovnica"
 ---
 
-Dobro došli. Ovdje objavljujem grafikone koji se automatski osvježavaju iz Eurostata.
+Dobro doĹˇli. Ovdje objavljujem grafikone koji se automatski osvjeĹľavaju iz Eurostata.
