--- a/indikatori-gospodarske-aktivnosti.qmd
+++ b/indikatori-gospodarske-aktivnosti.qmd
@@ -2,4 +2,4 @@
 title: "Indikatori gospodarske aktivnosti"
 ---
 
-> Radni nacrt. Dodaj grafove i analize za: Indikatori gospodarske aktivnosti.
+> Radni nacrt.
