--- a/klimatski-makro.qmd
+++ b/klimatski-makro.qmd
@@ -2,4 +2,4 @@
 title: "Klimatski makro pokazatelji"
 ---
 
-> Radni nacrt. Dodaj grafove i analize za: Klimatski makro pokazatelji.
+> Radni nacrt.
